--- a/submissions.tex
+++ b/submissions.tex
@@ -242,4 +242,34 @@ automatic pipeline for constructing 3DMMs of this scale.
 
 Anastasios (Tassos) Roussos
 a.roussos@imperial.ac.uk
+% ----------------------------------------------------------------------------
+\section*{Collective Perception}
+
+We live in a world where we collaborate and interact with each other to be more
+efficient. Ants, bees, wolves, and many other animals are masters of
+collaborating with each other. Similarly, robots and future man-made machines
+must work together to achieve the desired goals. Understanding the animals'
+collective perception, which enables them to work together, is a complex
+problem. The underlying mechanism for collective perception in most animals has
+not yet been fully discovered, but with the current technology, we can make the
+collective perception for the robots to become a reality. We are even able to go
+beyond the norm. Humans, for instance, learn and exchange knowledge and
+experience, but are not able to share the core of their perception. Unlike
+humans, robots can share every single bit that they learn and experience. With
+this extraordinary ability, the future robots, devices, and sensors will be able
+to achieve more than what we expect.
+
+In this talk, major challenges and our recent advancements in multi-robot
+perception is presented. It is shown that the robots are able to perform
+cooperative simultaneous localization and mapping in large-scale urban
+environments, without seeing each other. It is demonstrated that how
+heterogeneous robots, such as quadrotors and ground robots, are able to
+cooperatively map an unknown environment, without having any knowledge about
+there relative positions. At the end, current ongoing works, such as multi-robot
+dense SLAM applied to virtual reality, is presented. Finally the future
+directions and challenges, such as semantic SLAM and multi-session multi-robot
+SLAM, are presented.
+
+Sajad Saeedi
+s.saeedi-gharahbolagh@imperial.ac.uk
 \end{document}
