--- a/handout.tex
+++ b/handout.tex
@@ -11,12 +11,15 @@
 \definecolor{iclightblue}{RGB}{200,212,232}
 \definecolor{icmiddlered}{RGB}{204,51,0}
 \definecolor{iclightred}{RGB}{232,212,32}
+\colorlet{nontalk}{black!70}
 
 \hyphenpenalty=10000
 \hbadness=10000
 
 \newcommand{\talk}[1]{\Large\flushleft\textbf{#1}\\}
+\newcommand{\schetalk}[1]{\noindent\textcolor{black}{#1}}
 \newcommand{\speaker}[1]{\textit{#1}\\}
+\newcommand{\schespeaker}[1]{\textit{#1}}
 \newcommand{\separator}{\noindent\rule{\linewidth}{0.1mm}}
 \newcommand{\votebox}{\vspace{-5cm}\noindent\hfill\framebox(20,20){}}
 \newcommand{\hstrut}{\noindent\color{iclightblue}\rule{\linewidth}{0pt}}
@@ -31,58 +34,58 @@
   & Opening and welcome by \textbf{Postdoc Development Centre} (PDC)
   & \\
   10:15--10:35
-  & Deep Learning for Human Activity Recognition: A Resource Efficient implementation on Low-Power Devices
-  & \textit{Charence Wong}
+  & \schetalk{Deep Learning for Human Activity Recognition: A Resource Efficient implementation on Low-Power Devices}
+  & \schespeaker{Charence Wong}
   \\
   10:35--10:55
-  & Computational imaging for digitizing shape and appearance of ``hard-to-scan'' materials
-  & \textit{Ilya Reshetouski}
+  & \schetalk{Computational imaging for digitizing shape and appearance of ``hard-to-scan'' materials}
+  & \schespeaker{Ilya Reshetouski}
   \\[0.8cm]
-  \textcolor{gray}{10:55--11:05}
-  & \textit{\color{gray}Break}
+  \textcolor{nontalk}{10:55--11:05}
+  & \textit{\color{nontalk}Break}
   & \\[0.3cm]
   11:05--11:25
-  & DropNeuron: An Approach for Simplifying the Structure of Deep Neural Networks
-  & \textit{Wei Pan}\\
+  & \schetalk{DropNeuron: An Approach for Simplifying the Structure of Deep Neural Networks}
+  & \schespeaker{Wei Pan}\\
   11:25--11:45
-  & Transfer Learning for Optimal Configuration of Big Data Software
-  & \textit{Pooyan Jamshidi}\\
+  & \schetalk{Transfer Learning for Optimal Configuration of Big Data Software}
+  & \schespeaker{Pooyan Jamshidi}\\
   11:45--12:05
-  & Collective Perception
-  & \textit{Sajad Saeedi}\\[0.3cm]
-  \textcolor{gray}{12:05--12:20}
-  & \textit{\color{gray}Break}
+  & \schetalk{Collective Perception}
+  & \schespeaker{Sajad Saeedi}\\[0.3cm]
+  \textcolor{nontalk}{12:05--12:20}
+  & \textit{\color{nontalk}Break}
   & \\[0.3cm]
   12:20--12:40
-  & Semantic Segmentation on Embedded Hyperspectral Images for Brain Cancer Detection
-  & \textit{Daniele Ravi}\\
+  & \schetalk{Semantic Segmentation on Embedded Hyperspectral Images for Brain Cancer Detection}
+  & \schespeaker{Daniele Ravi}\\
   12:40--13:00
-  & Deep Learning via Simulation for Robot Grasping
-  & Edward Johns\\[0.3cm]
-  \textcolor{gray}{13:00--14:00}
-  & \textit{\color{gray}Lunch}
+  & \schetalk{Deep Learning via Simulation for Robot Grasping}
+  & \schespeaker{Edward Johns}\\[0.3cm]
+  \textcolor{nontalk}{13:00--14:00}
+  & \textit{\color{nontalk}Lunch}
   & \\[0.3cm]
   14:00--15:00
   & {\large\bf Keynote --- Raia Hadsell, Google DeepMind}
   & \textit{Raia Hadsell}\\
-  \textcolor{gray}{15:00--15:30}
-  & \textit{\color{gray}Coffee Break}
+  \textcolor{nontalk}{15:00--15:30}
+  & \textit{\color{nontalk}Coffee Break/Mini reception in Huxley 218}
   & \\[0.3cm]
   15:30--15:50
-  & Learning for 3D Scene Understanding
-  & \textit{Ankur Handa}\\
+  & \schetalk{Learning for 3D Scene Understanding}
+  & \schespeaker{Ankur Handa}\\
   15:50--16:10
-  & Static Deadlock Detection for Go based on Session Graph Synthesis
-  & \textit{Nicholas Ng}\\[0.8cm]
-  \textcolor{gray}{16:10--16:20}
-  & \textit{\color{gray}Break}
+  & \schetalk{Static Deadlock Detection for Go based on Session Graph Synthesis}
+  & \schespeaker{Nicholas Ng}\\[0.8cm]
+  \textcolor{nontalk}{16:10--16:20}
+  & \textit{\color{nontalk}Break}
   & \\[0.3cm]
   16:20--16:40
-  & Minimizing application deployment cost using spot cloud resources
-  & \textit{Daniel J. Dubois}\\
+  & \schetalk{Minimizing application deployment cost using spot cloud resources}
+  & \schespeaker{Daniel J. Dubois}\\
   16:40--17:00
-  & Dense 3D reconstruction and modelling of faces: addressing the real-world challenges
-  & \textit{Anastasios Roussos}\\[0.8cm]
+  & \schetalk{Dense 3D reconstruction and modelling of faces: addressing the real-world challenges}
+  & \schespeaker{Anastasios Roussos}\\[0.8cm]
   17:00
   & Prize giving and Closing
   & \\
