--- a/handout.tex
+++ b/handout.tex
@@ -63,13 +63,13 @@
   & \schetalk{Deep Learning via Simulation for Robot Grasping}
   & \schespeaker{Edward Johns}\\[0.3cm]
   \textcolor{nontalk}{13:00--14:00}
-  & \textit{\color{nontalk}Lunch}
+  & \textit{\color{nontalk}Lunch in Huxley 218}
   & \\[0.3cm]
   14:00--15:00
   & {\large\bf Keynote --- Raia Hadsell, Google DeepMind}
   & \textit{Raia Hadsell}\\
   \textcolor{nontalk}{15:00--15:30}
-  & \textit{\color{nontalk}Coffee Break/Mini reception in Huxley 218}
+  & \textit{\color{nontalk}Coffee Break/Reception in Huxley 218}
   & \\[0.3cm]
   15:30--15:50
   & \schetalk{Learning for 3D Scene Understanding}
