--- a/handout.tex
+++ b/handout.tex
@@ -106,7 +106,8 @@ To view schedule with full abstracts, scan QR code or visit
 \end{minipage}
 \clearpage
 \noindent
-\textbf{\flushleft\LARGE\color{icdarkblue}Best Presentation Voting}\hfill\textit{Please hand this to organisers before 5pm}\\
+\textbf{\flushleft\LARGE\color{icdarkblue}Best Presentation Voting}\hfill%
+\textit{Voting begins at 5pm in LT145}\\
 % Session 1
 \noindent
 \begin{minipage}[t]{0.49\linewidth}
@@ -253,6 +254,16 @@ To view schedule with full abstracts, scan QR code or visit
 \end{minipage}
 \begin{minipage}[t]{0.49\linewidth}
 \separator%
+
+{\it
+\begin{itemize}
+  \item Voting begins at 5pm in LT145
+  \item Please keep voting form until after the last talk
+  \item Choose one speaker for the best presentation in box
+  \item Please hand the form to Luigi or Nick in person
+  \item Please vote only once
+\end{itemize}
+}
 \end{minipage}
 \vfill
 \noindent
@@ -268,6 +279,7 @@ To view schedule with full abstracts, scan QR code or visit
 \noindent
 \begin{minipage}[t]{0.49\linewidth}
 \separator%
+\vfill
 \end{minipage}
 \begin{minipage}[t]{0.02\linewidth}
 \hstrut%
