Update handout and poster

--- a/handout.tex
+++ b/handout.tex
@@ -87,12 +87,12 @@
   & \schetalk{Dense 3D reconstruction and modelling of faces: addressing the real-world challenges}
   & \schespeaker{Anastasios Roussos}\\[0.8cm]
   17:00
-  & Prize giving and Closing
+  & Best Presentation Voting, Prize giving and Closing
   & \\
 \end{tabular}
 \vfill
 \noindent
-\begin{minipage}{0.15\linewidth}
+\begin{minipage}{0.10\linewidth}
   \includegraphics[width=\linewidth]{qr.png}
 \end{minipage}
 \begin{minipage}{0.85\linewidth}
@@ -258,8 +258,8 @@ To view schedule with full abstracts, scan QR code or visit
 {\it
 \begin{itemize}
   \item Voting begins at 5pm in LT145
+  \item Select one speaker for the best presentation award
   \item Please keep voting form until after the last talk
-  \item Choose one speaker for the best presentation in box
   \item Please hand the form to Luigi or Nick in person
   \item Please vote only once
 \end{itemize}
